Closed
Bug 1338287
Opened 8 years ago
Closed 8 years ago
Make nsIDocument::DocumentFlashClassification accessible from privileged JS
Categories
(Core Graveyard :: Plug-ins, defect)
Core Graveyard
Plug-ins
Tracking
(firefox53+ fixed, firefox54 fixed)
RESOLVED
FIXED
mozilla54
People
(Reporter: bytesized, Assigned: bytesized)
References
Details
Attachments
(1 file)
59 bytes,
text/x-review-board-request
|
bzbarsky
:
review+
Felipe
:
feedback+
lizzard
:
approval-mozilla-beta+
|
Details |
We want the pings to be able to access the document flash classification.
Comment hidden (mozreview-request) |
Assignee | ||
Updated•8 years ago
|
Assignee: nobody → ksteuber
Assignee | ||
Comment 2•8 years ago
|
||
Comment on attachment 8836881 [details]
Bug 1338287 - Make nsIDocument::DocumentFlashClassification accessible from privileged JS
Can you take a look at this and make sure that this is what you had in mind? You can see sample usage in browser_flash_block_lists.js.
Attachment #8836881 -
Flags: feedback?(felipc)
Assignee | ||
Updated•8 years ago
|
Attachment #8836881 -
Flags: review?(bzbarsky)
![]() |
||
Comment 3•8 years ago
|
||
mozreview-review |
Comment on attachment 8836881 [details]
Bug 1338287 - Make nsIDocument::DocumentFlashClassification accessible from privileged JS
https://reviewboard.mozilla.org/r/112194/#review113518
r=me
Attachment #8836881 -
Flags: review?(bzbarsky) → review+
Comment 4•8 years ago
|
||
Comment on attachment 8836881 [details]
Bug 1338287 - Make nsIDocument::DocumentFlashClassification accessible from privileged JS
(In reply to Kirk Steuber [:bytesized] from comment #2)
> Can you take a look at this and make sure that this is what you had in mind?
> You can see sample usage in browser_flash_block_lists.js.
Yep, this is perfect
Attachment #8836881 -
Flags: feedback?(felipc) → feedback+
Pushed by felipc@gmail.com:
https://hg.mozilla.org/integration/autoland/rev/3eebe9f81fc9
Make nsIDocument::DocumentFlashClassification accessible from privileged JS r=bz
Comment 6•8 years ago
|
||
bugherder |
Status: NEW → RESOLVED
Closed: 8 years ago
status-firefox54:
--- → fixed
Resolution: --- → FIXED
Target Milestone: --- → mozilla54
Assignee | ||
Comment 7•8 years ago
|
||
Assignee | ||
Comment 8•8 years ago
|
||
Comment on attachment 8836881 [details]
Bug 1338287 - Make nsIDocument::DocumentFlashClassification accessible from privileged JS
Approval Request Comment
[Feature/Bug causing the regression]: This feature is needed for the Shield study to be run on Release 52 (bug 1335232), which we'll use to study the effect of making flash click-to-play by default.
[User impact if declined]: Can't run the study as intended
[Is this code covered by automated tests?]: Yes
[Has the fix been verified in Nightly?]: Yes
[Needs manual test from QE? If yes, steps to reproduce]: Not for this feature independently. We'll do QE on the study as a whole to make sure all pieces work as expected
[List of other uplifts needed for the feature/fix]: Bug 1318768, Bug 1323220, Bug 1325255, Bug 1322204, Bug 1325651, Bug 1319571, Bug 1321377, Bug 1307604, Bug 1323064, Bug 1335549, Bug 1333303, Bug 1333483, Bug 1336714, Bug 1338287
[Is the change risky?]: No
[Why is the change risky/not risky?]: Makes existing code accessible from privileged Javascript
[String changes made/needed]: none
Attachment #8836881 -
Flags: approval-mozilla-release?
Attachment #8836881 -
Flags: approval-mozilla-beta?
Comment 9•8 years ago
|
||
Comment on attachment 8836881 [details]
Bug 1338287 - Make nsIDocument::DocumentFlashClassification accessible from privileged JS
this was deemed too risky for beta
Attachment #8836881 -
Flags: approval-mozilla-release?
Attachment #8836881 -
Flags: approval-mozilla-beta?
Attachment #8836881 -
Flags: approval-mozilla-beta-
Assignee | ||
Comment 10•8 years ago
|
||
@lizzard As I said on IRC, I would like this uplifted to Beta 53. Since it was denied for Beta 52, I cannot make the request myself, so if you could help me out I would appreciate it. Thanks!
Flags: needinfo?(lhenry)
Comment 11•8 years ago
|
||
Comment on attachment 8836881 [details]
Bug 1338287 - Make nsIDocument::DocumentFlashClassification accessible from privileged JS
resetting approval flag
Attachment #8836881 -
Flags: approval-mozilla-beta- → approval-mozilla-beta?
Updated•8 years ago
|
Flags: needinfo?(lhenry)
Updated•8 years ago
|
status-firefox53:
--- → affected
Assignee | ||
Comment 12•8 years ago
|
||
I should note that the bugs listed in Comment 8 as "List of other uplifts needed for the feature/fix" were required for uplift to Firefox 52. They are already in Firefox 53, so they do not need to be uplifted to it.
Comment 13•8 years ago
|
||
Comment on attachment 8836881 [details]
Bug 1338287 - Make nsIDocument::DocumentFlashClassification accessible from privileged JS
Last bit of cleanup before we ship the Flash study in 53.
Attachment #8836881 -
Flags: approval-mozilla-beta? → approval-mozilla-beta+
Comment 15•8 years ago
|
||
bugherder uplift |
Updated•3 years ago
|
Product: Core → Core Graveyard
You need to log in
before you can comment on or make changes to this bug.
Description
•