Bug 1338287 - Make nsIDocument::DocumentFlashClassification accessible from privileged JS r=bz a=lizzard

MozReview-Commit-ID: 1II2puZMub5