dom/base/nsDocument.cpp
@@ -12930,7 +12930,7 @@ ArrayContainsTable(const nsTArray<nsCString>& aTableArray,
  * For more information, see
  * toolkit/components/url-classifier/flash-block-lists.rst
  */
-nsIDocument::FlashClassification
+FlashClassification
 nsDocument::PrincipalFlashClassification(bool aIsTopLevel)
 {
   nsresult rv;
@@ -13019,7 +13019,7 @@ nsDocument::PrincipalFlashClassification(bool aIsTopLevel)
   return FlashClassification::Unknown;
 }
 
-nsIDocument::FlashClassification
+FlashClassification
 nsDocument::ComputeFlashClassification()
 {
   nsCOMPtr<nsIDocShellTreeItem> current = this->GetDocShell();
@@ -13068,7 +13068,7 @@ nsDocument::ComputeFlashClassification()
  *
  * This function will NOT return FlashClassification::Unclassified
  */
-nsIDocument::FlashClassification
+FlashClassification
 nsDocument::DocumentFlashClassification()
 {
   if (mFlashClassification == FlashClassification::Unclassified) {
